# R4C

./: .gitignore  LAUNCH.md  pyproject.toml
R4C/: settings.py  urls.py
customers/: admin.py  models.py
orders/: admin.py  models.py  tests.py  views.py
orders/migrations/: 0002_waitinglistitem.py
robots/: __init__.py  admin.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
templates/emails/: waiting_list_item_available.txt
utils/: date.py  email.py
